--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <a href="index.html" class="navbar-brand"><img id="logo" src="images/logo.png" alt="Ndioma logo"></a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler1">
-        <span class="navbar-toggler-icon "></span>
-      </button>
+      <div class="navbar-sroll-show">
+        <a href="#" class="btn btn-ndioma mr-3 action_btn_fill" id="navbar_btn" role="button">Book Events</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler1">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+      </div>
 
       <div class="collapse navbar-collapse" id="navbarToggler1">
         <ul class="navbar-nav ml-auto">
@@ -30,12 +33,22 @@
     </nav>
     <div class="jumbotron bg-transparent banner_view">
       <div class="row">
-        <div class="col-9 banner_left">
+        <div class="col-8 banner_left">
           <h1 class="display-7 justify-content-left head_in">Eatries & <br> Events Center</h1>
-          <a href="#" class="btn btn-outline-warning action_btn" role="button">Explore our Menu</a>
+          <a href="#" class="btn btn-outline-warning action_btn p-2 mt-3" role="button">Explore our Menu</a>
         </div>
-        <div class="col-3 banner_right">
-          <a href="#" class="btn btn-warning action_btn_fill" role="button">Book Events</a>      </div>
+
+        <div class="col-4 banner_right bg-transparent">
+          <ul class="list-group bg-transparent ml-4">
+            <li class="list-group-item border-0 bg-transparent mb-3 "><img src="images/download.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
+            <li class="list-group-item border-0 bg-transparent mb-3 ml-3"><img src="images/egusi.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
+            <li class="list-group-item border-0 bg-transparent mb-3 "><img src="images/meats.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
+            <li class="list-group-item border-0 bg-transparent mb-3 ml-2"><img src="images/unnamed.jpg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <p class="lead ndioma_color font-weight-bolder"><i>eat right, eat safe</i></p>
       </div>
     </div>
   </header>
@@ -43,8 +56,8 @@
   <main class="container-fluid">
     <section class="service_sect">
       <h3 class="text-center serv_head">Our Services</h3>
-      <div class="row justify-content-around">
-        <div class="col-lg-5 col-md-6 col-xs-12">
+      <div class="row justify-content-around m-md-3">
+        <div class="col-lg-4 col-md-6 col-xs-12">
           <div class="card mb-3">
             <div class="card-header card_header font-weight-bolder">GET FOOD FAST - NOT FAST FOOD</div>
             <img src="images/unnamed.jpg" alt="" class="card-img-top" height="300px">
@@ -54,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-6 col-xs-12">
+        <div class="col-lg-4 col-md-6 col-xs-12">
           <div class="card  mb-3">
             <div class="card-header card_header font-weight-bolder">AWESOME EVENTS CENTER</div>
             <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
@@ -62,6 +75,37 @@
               <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
             </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="card  mb-3">
+            <div class="card-header card_header font-weight-bolder">OUTDOOR CATERING</div>
+            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
+              <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="card  mb-3">
+            <div class="card-header card_header font-weight-bolder">RESERVATIONS</div>
+            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
+              <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="card  mb-3">
+            <div class="card-header card_header font-weight-bolder">NDIOMA SPECIAL</div>
+            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
+              <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
