--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="jumbotron bg-transparent banner_view">
       <div class="row">
         <div class="col-8 banner_left">
-          <h1 class="display-7 justify-content-left head_in">Eatries & <br> Events Center</h1>
+          <h1 class="display-7 justify-content-left head_in">Eatries & <br> Events Centre</h1>
           <a href="#" class="btn btn-outline-warning action_btn p-2 mt-3" role="button">Explore our Menu</a>
         </div>
 
@@ -48,19 +48,26 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <p class="lead ndioma_color font-weight-bolder"><i>eat right, eat safe</i></p>
+        <p class="lead ndioma_color font-weight-bolder"><i>eat right, eat safe, simply delicious</i></p>
       </div>
     </div>
   </header>
 
   <main class="container-fluid">
     <section class="service_sect">
+      <h3 class="text-center serv_head">Our Mission</h3>
+      <div class="row justify-content-center pl-5 pr-5">
+        <p class="lead mission_text"><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque dolorem tempora amet possimus, vero velit voluptatibus eveniet aliquid molestiae non in sint. Nostrum earum eveniet illo perspiciatis maxime dolore.</strong></p>
+      </div>
+    </section>
+
+    <section class="service_sect">
       <h3 class="text-center serv_head">Our Services</h3>
-      <div class="row justify-content-around m-md-3">
+      <div class="row justify-content-around p-3">
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="card mb-3">
+          <div class="card  mb-4">
             <div class="card-header card_header font-weight-bolder">GET FOOD FAST - NOT FAST FOOD</div>
-            <img src="images/unnamed.jpg" alt="" class="card-img-top" height="300px">
+            <img src="images/unnamed.jpg" alt="" class="card-img-top p-2 p-2" height="300px">
             <div class="card-body">
               <p class="card-text">Hello, we’re Ndioma, your new premium healthy eatries. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
@@ -68,9 +75,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="card  mb-3">
-            <div class="card-header card_header font-weight-bolder">AWESOME EVENTS CENTER</div>
-            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+          <div class="card  mb-4">
+            <div class="card-header card_header font-weight-bolder">AWESOME EVENTS CENTRE</div>
+            <img src="images/event_centre.jpeg" alt="" class="card-img-top p-2" height="300px">
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
@@ -78,9 +85,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="card  mb-3">
+          <div class="card  mb-4">
             <div class="card-header card_header font-weight-bolder">OUTDOOR CATERING</div>
-            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+            <img src="images/catering.jpeg" alt="" class="card-img-top p-2" height="300px">
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
@@ -88,9 +95,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="card  mb-3">
+          <div class="card  mb-4">
             <div class="card-header card_header font-weight-bolder">RESERVATIONS</div>
-            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+            <img src="images/event_banner.jpeg" alt="" class="card-img-top p-2" height="300px">
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
@@ -98,9 +105,19 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="card  mb-3">
-            <div class="card-header card_header font-weight-bolder">NDIOMA SPECIAL</div>
-            <img src="images/event_banner.jpeg" alt="" class="card-img-top" height="300px">
+          <div class="card  mb-4">
+            <div class="card-header card_header font-weight-bolder">NDIOMA SPECIALS</div>
+            <img src="images/specials.jpeg" alt="" class="card-img-top p-2" height="300px">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
+              <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-xs-12">
+          <div class="card  mb-4">
+            <div class="card-header card_header font-weight-bolder">SHARWAMA SPOT</div>
+            <img src="images/sharwama.jpeg" alt="" class="card-img-top p-2" height="300px">
             <div class="card-body">
               <p class="card-text">Lorem ipsum dolor sit amet, cons rem eos enim maxime dolor? Ad, tempora ullam!  quidem nostrum ratione laborum impeditluptates eligendi perferendis , aspernatur eaque ullam minus?</p>
               <a href="#" class="btn btn-ndioma font-weight-bold">View more</a>
@@ -110,7 +127,67 @@
       </div>
     </section>
 
+    <section class="service_sect">
+      <h3 class="text-center serv_head">Testimonies</h3>
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row justify-content-center pl-5 pr-5">
+              <p class="lead mission_text"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque dolorem tempora amet possimus, vero velit voluptatibus eveniet aliquid molestiae non in sint. Nostrum earum eveniet illo perspiciatis maxime dolore.</em></p>
+              <p class="text-left"><i>Tochukwu Tosky</i></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row justify-content-center pl-5 pr-5">
+              <p class="lead mission_text"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque dolorem tempora amet possimus, vero velit voluptatibus eveniet aliquid molestiae non in sint. Nostrum earum eveniet illo perspiciatis maxime dolore.</em></p>
+              <p class="text-left"><i>Cheta Heaveanworth</i></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row justify-content-center pl-5 pr-5">
+              <p class="lead mission_text"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque dolorem tempora amet possimus, vero velit voluptatibus eveniet aliquid molestiae non in sint. Nostrum earum eveniet illo perspiciatis maxime dolore.</em></p>
+              <p class="text-left"><i>Marybngozi</i></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+    </section>
   </main>
+  <footer class=" container-fluid bg_ndioma_dark">
+    <div class="row justify-content-around pt-3">
+      <div class="col-6">
+        <h5>Contacts</h5>
+        <ul class="list-group bg-transparent">
+          <li class="list-group-item social_link border-0 bg-transparent"><img src="images/phone-call.svg" class="pr-2" width="30" height="30" alt=""><span>08167311774</span></li>
+          <li class="list-group-item social_link border-0 bg-transparent"><img src="images/phone-call.svg" class="pr-2" width="30" height="30" alt=""><span>09017396062</span></li>
+          <li class="list-group-item social_link border-0 bg-transparent"><img src="images/instagram.svg" class="pr-2" width="30" height="30" alt=""><span>Ndiomaeatriesandeventcentre</span></li>
+        </ul>
+      </div>
+      <div class="col-6 ">
+        <h5>Address</h5>
+        <p>MSP Estate Plot 28/29, Beside A.Y.M. Shafa Ltd Filling Staton, Olusegun Obasanjo way, Wuye District, Abuja</p>
+      </div>
+    </div>
+    <div>
+      <p class="authored"><a href="https://twitter.com/marybngozi">Designed by Marybngozi</a></p>
+    </div>
+  </footer>
 
 
   <!-- Optional JavaScript -->
