Fixed, and set up

--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   <title>Ndioma | Home</title>
 </head>
 <body>
-  <header style="height: 80vh;">
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <a href="index.html" class="navbar-brand"><img id="logo" src="images/logo.png" alt="Ndioma logo"></a>
 
@@ -30,25 +30,8 @@
         </ul>
       </div>
     </nav>
-    <div class="jumbotron bg-transparent banner_view">
-      <div class="row">
-        <div class="col-8 banner_left">
-          <h1 class="display-7 justify-content-left head_in">Eatries & <br> Events Centre</h1>
-          <a href="#" class="btn btn-outline-warning action_btn p-2 mt-3" role="button">Explore our Menu</a>
-        </div>
-
-        <div class="col-4 banner_right bg-transparent">
-          <ul class="list-group bg-transparent ml-4">
-            <li class="list-group-item border-0 bg-transparent mb-3 "><img src="images/download.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
-            <li class="list-group-item border-0 bg-transparent mb-3 ml-3"><img src="images/egusi.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
-            <li class="list-group-item border-0 bg-transparent mb-3 "><img src="images/meats.jpeg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
-            <li class="list-group-item border-0 bg-transparent mb-3 ml-2"><img src="images/unnamed.jpg" class="rounded-circle shadow" width="60" height="60" alt=""></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <p class="lead ndioma_color font-weight-bolder"><i>eat right, eat safe, simply delicious</i></p>
-      </div>
+    <div class="jumbotron bg-transparent">
+      
     </div>
   </header>
 
